# lxsim

./: CMakeLists.txt  LICENSE  README.md
include/: xsi_kernel.h
src/: generator.cpp  xsi_kernel.cpp
